--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@utils/*": ["./src/utils/*"]
-    }
+      "@utils/*": ["./src/utils/*"],
+      "@components/*": ["./src/components/*"],
+    },
+    "moduleSuffixes": [".ios", ".android", ".native", ""],
   }
 }
